# compos

./: CMakeLists.txt  README.md
include/: ecs.h
include/compos/: archetype.h  component.h  compos.h  const.h  entity.h  type_alias.h  uuid.h
include/ecs/: component.h  entity.h  type_alias.h  untyped_vector.h  uuid.h
src/: benchmark.cpp  compos_fmt.h  ecs.h  ecs_fmt.h  main.cpp  timing.h
